Various improvements (#7)
* Various improvements

* Test fixes and such

* Fix test logging